--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,7 @@ LazyData: true
 LinkingTo: Rcpp
 Imports: Rcpp, imager, stats
 RoxygenNote: 7.1.0
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
